--- a/battle.html
+++ b/battle.html
@@ -55,7 +55,7 @@
                 <li><strong>Patching "gaps": </strong>If the opponent finds mistakes, their team has the right to “patch” them by offering its own fix for the flaws in the report.</li>
                 <li><strong>Role switch: </strong>Sometimes the teams switch roles, with the presenter becoming the opponent and vice versa.</li>
                 <li><strong>Scoring: </strong>After the round, the jury announces how many points each team earned, taking into account the correctness of the solution and the errors found.</li>
-                <li><strong>Continuation fo the Mat(c)h: </strong>Teams continue challenging each other on other problems until all are considered or until one team refuses to issue further challenges.</li>
+                <li><strong>Continuation of the Mat(c)h: </strong>Teams continue challenging each other on other problems until all are considered or until one team refuses to issue further challenges.</li>
                 <li><strong>Results: </strong>At the end of the math battle, all points are tallied, and the team with the highest score is declared the winner. </li>
             </ul>
   </section>
@@ -66,4 +66,5 @@
   </footer>
 
 </body>
+
 </html>
