--- a/staff.html
+++ b/staff.html
@@ -72,6 +72,13 @@
     </div>
 
     <div class="staff-card">
+      <img src="images/katja.jpg" alt="Ekaterina Chizhova" width="150">
+      <h3>Ekaterina Chizhova</h3>
+      <p>IMO HON. mention</p>
+      <p>EGMO SILVER medal 2024 & 2025</p>
+    </div>
+      
+    <div class="staff-card">
       <img src="images/patrik.jpeg" alt="Patrik Cvetek" width="150">
       <h3>Patrik Cvetek</h3>
       <p>IMO HON. mention</p>
@@ -135,3 +142,4 @@
 </body>
 
 </html>
+
