--- a/battle.html
+++ b/battle.html
@@ -11,6 +11,7 @@
 <header>
   <h1>IMBT 2026</h1>
   <p>International Math Battle Tournament · 5–11 January 2026 · Bovec, Slovenia</p>
+  <img src="images/logo.jpg" alt="logotip" class="logo">
 </header>
 
 <div class="nav">
