--- a/registration.html
+++ b/registration.html
@@ -63,10 +63,14 @@
   <section id="costs">
     <h2>Participation Costs</h2>
     <p>
-      Since this is the first edition of the competition, there are currently no sponsors. 
+      The participation package includes transfer from/to Ljubljana airport or Ljubljana central train station to/from Bovec, accommodation at 4* Mangart hotel, tourist tax, 3 meals/day, hiking tour and other activities.
 
-      We hence kindly ask the participants to cover some organisational costs in the amount of <strong>49 eur/day</strong>.
+      The participation package per person for the period 5–11 January 2026 amounts to EUR 306 (for participants aged 18 and above) or EUR 300 (for participants under 18).
 
+      The participation fee may be paid either in full or in two installments:
+      A reservation deposit in the amount of EUR 49 must be paid no later than 30 November 2025.
+      The remaining balance must be paid no later than 15 December 2025.
+      <br>
       We’ll be happy if you share the information about <strong>IMBT 2026</strong> and this could help us find sponsors for the event.
     </p>
     <p>More info about the costs and sponsors are available in <a href="presentations/IMBT_website_presentation.pdf">the following presentation.</a></p>
