--- a/404.html
+++ b/404.html
@@ -8,10 +8,11 @@
 </head>
 <body>
 
-  <header>
-    <h1>IMBT 2026</h1>
-    <p>International Math Battle Tournament · 5–11 January 2026 · Bovec, Slovenia</p>
-  </header>
+<header>
+  <h1>IMBT 2026</h1>
+  <p>International Math Battle Tournament · 5–11 January 2026 · Bovec, Slovenia</p>
+  <img src="images/logo.jpg" alt="logotip" class="logo">
+</header>
 
 <title>404 Not Found</title>
 
