--- a/registration.html
+++ b/registration.html
@@ -51,7 +51,7 @@
   <section id="register">
       <h2>Registration</h2>
       <p>Fill out the form to apply to IMBT, be it as a participant or as one of the staff members. The registration deadline is 15 November 2025.</p>
-      <p><strong>The number of participants is limited!</strong> Participation is confirmed after the deposit is paid. Admission to IBMT is granted in the order of payment.</p>
+      <p><strong>The number of participants is limited!</strong> Participation is confirmed after the deposit is paid. Admission to IMBT is granted in the order of payment.</p>
       <p style="margin: 0 auto; width: 300px; text-align: center;">
         <strong>Timeline</strong>
       <ul>
