hotel-mangart-logo

--- a/partners.html
+++ b/partners.html
@@ -67,7 +67,7 @@
     </a>
 
     <a href="https://hotel-mangart.com/" target="_blank" class="partner-card">
-      <img src="images/hotel_mangart_logo.jpeg" alt="Hotel Mangart">
+      <img src="images/hotel-mangart-logo.png" alt="Hotel Mangart">
       <h3>4* Hotel Mangart</h3>
     </a>
 
