--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
         <span></span>
       </button>
       <nav id="mainmenu">
-        <span class="about_span"><a href="novi.html">ABOUT</a></span>
+        <span class="about_span"><a href="index.html">ABOUT</a></span>
         <span class="battle_span"><a href="battle.html">WHAT IS A MATH BATTLE?</a></span>
         <span class="registration_span"><a href="registration.html">REGISTRATION</a></span>
         <span class="eventinfo_span"><a href="event_info.html">EVENT INFO</a></span>
