organisers and partners

--- a/partners.html
+++ b/partners.html
@@ -22,7 +22,7 @@
         <span class="registration_span"><a href="registration.html">REGISTRATION</a></span>
         <span class="eventinfo_span"><a href="event_info.html">EVENT INFO</a></span>
         <span class="staff_span"><a href="staff.html">STAFF</a></span>
-        <span class="partners_span"><a href="partners.html">PARTNERS</a></span>
+        <span class="partners_span"><a href="partners.html">ORGANISERS AND PARTNERS</a></span>
         <span class="contactus_span"><a href="mailto:imbt.slo@gmail.com">CONTACT US</a></span>
       </nav>
     </div>
@@ -53,6 +53,13 @@
 </div>
 
 <section id="partners">
+  <h2>The organizer of the IMBT tournament</h2>
+  <div class="partners-container">
+  <a href="https://www.dmfa.si" target="_blank" class="partner-card">
+      <img src="images/dmfa.png" alt="DMFA">
+      <h3>DMFA, Society of Mathematicians, Physicists and Astronomers of Slovenia</h3>
+    </a>
+  </div>
   <h2>Our Partners</h2>
   <div class="partners-container">
 
@@ -66,10 +73,7 @@
       <h3>the Faculty of Mathematics and Physics, University of Ljubljana</h3>
     </a>
 
-    <a href="https://www.dmfa.si" target="_blank" class="partner-card">
-      <img src="images/dmfa.png" alt="DMFA">
-      <h3>DMFA, Society of Mathematicians, Physicists and Astronomers of Slovenia</h3>
-    </a>
+  
 
     <a href="https://hotel-mangart.com/" target="_blank" class="partner-card">
       <img src="images/hotel-mangart-logo.png" alt="Hotel Mangart">
