--- a/battle.html
+++ b/battle.html
@@ -27,7 +27,7 @@
         <span class="registration_span"><a href="registration.html">REGISTRATION</a></span>
         <span class="eventinfo_span"><a href="event_info.html">EVENT INFO</a></span>
         <span class="staff_span"><a href="staff.html">STAFF</a></span>
-        <span class="partners_span"><a href="partners.html">PARTNERS</a></span>
+        <span class="partners_span"><a href="partners.html">ORGANISERS AND PARTNERS</a></span>
         <span class="contactus_span"><a href="mailto:imbt.slo@gmail.com">CONTACT US</a></span>
       </nav>
     </div>
