--- a/index.html
+++ b/index.html
@@ -292,6 +292,20 @@
      a {
       display: inline-block;
     }
+    .dmfa-logo {
+      position: absolute;
+      top:-3.75px;
+      height:70px;
+      left:0px;
+      margin:0;
+      padding:0;
+    }
+    .dmfa-logo img{
+      height: 70px;
+      width: auto;
+      position: relative;
+      top: 3.75px;
+}
   </style>
   <svg width="0" height="0">
     <filter id="inner-shadow" x="-50%" y="-50%" width="200%" height="200%">
@@ -327,12 +341,16 @@
       </div>
     </div>
     <div class="rectangle-1">
+      <a class="dmfa-logo" href="http://www.dmfa.si">
+          <img src="images/LogoDMFA.png" alt="DMFA Slovenije" title="DMFA Slovenije" />
+        </a>
       <button class="menu" id="menu" aria-label="Open menu">
         <span></span>
         <span></span>
         <span></span>
       </button>
       <nav id="mainmenu">
+        
         <span class="about_span"><a href="index.html">ABOUT</a></span>
         <span class="battle_span"><a href="battle.html">WHAT IS A MATH BATTLE?</a></span>
         <span class="registration_span"><a href="registration.html">REGISTRATION</a></span>
