--- a/staff.html
+++ b/staff.html
@@ -10,6 +10,9 @@
 <body>
 
     <div class="rectangle-1">
+       <a class="dmfa-logo" href="http://www.dmfa.si">
+          <img src="images/LogoDMFA.png" alt="DMFA Slovenije" title="DMFA Slovenije" />
+        </a>
       <button class="menu" id="menu" aria-label="Open menu">
         <span></span>
         <span></span>
