--- a/partners.html
+++ b/partners.html
@@ -11,6 +11,9 @@
 
 
     <div class="rectangle-1">
+       <a class="dmfa-logo" href="http://www.dmfa.si">
+          <img src="images/LogoDMFA.png" alt="DMFA Slovenije" title="DMFA Slovenije" />
+        </a>
       <button class="menu" id="menu" aria-label="Open menu">
         <span></span>
         <span></span>
