--- a/staff.html
+++ b/staff.html
@@ -61,7 +61,7 @@
     <h2>Organizational staff</h2>
     <p>IMBT is organized by a team of olympiad participants, university students and math
  coaches, who are passionate about making high-level math accessible, fun and exciting.
- Some of them of them are:</p>
+ Some of them are:</p>
     <div class="staff-container">
     
     <div class="staff-card">
@@ -194,5 +194,6 @@
       <feComposite operator="over" in="shadow" in2="SourceGraphic" />
     </filter>
 </svg>
+
 
 </html>
