--- a/event_info.html
+++ b/event_info.html
@@ -62,7 +62,7 @@
   <section id="schedule">
     <h2>Schedule</h2>
     <ul>
-      <li><strong>Jan 5:</strong> Arrivals & Opening Ceremony (don't forget to bring your country's flag)</li>
+      <li><strong>Jan 5:</strong> Arrivals & Opening Ceremony</li>
       <li><strong>Jan 6:</strong> 1st Math Battle</li>
       <li><strong>Jan 7:</strong> 2nd Math Battle</li>
       <li><strong>Jan 8:</strong> Excursion to Triglav mountains & Soča river</li>
@@ -113,5 +113,6 @@
       <feComposite operator="over" in="shadow" in2="SourceGraphic" />
     </filter>
 </svg>
+
 
 </html>
