--- a/partners.html
+++ b/partners.html
@@ -63,6 +63,13 @@
       <h3>DMFA, Society of Mathematicians, Physicists and Astronomers of Slovenia</h3>
     </a>
   </div>
+  <h2>Our Sponsors</h2>
+  <div class="partners-container">
+     <a href="https://www.janestreet.com" target="_blank" class="partner-card">
+      <img src="images/Jane_Street_Capital_Logo.svg.png" alt="Jane Street">
+      <h3>Jane Street</h3>
+    </a>
+  </div>
   <h2>Our Partners</h2>
   <div class="partners-container">
 
