--- a/registration.html
+++ b/registration.html
@@ -103,7 +103,7 @@
     <p>
       The participation package includes transfer from/to Ljubljana airport or Ljubljana central train station to/from Bovec, accommodation at 4* Mangart hotel, tourist tax, 3 meals per day, hiking tour and other activities. 
 
-      The participation package per person for the period 5–11 January 2026 amounts to 306&#8364; (for participants aged 18 and above) or 300&#8364; (for participants under 18).
+      The participation package per person for the period 5–11 January 2026 amounts to <b>229€</b>, instead of 306€ or 300€, thanks to our generous sponsors, <b>Jane Street</b>.
 
       The participation fee may be paid either in full or in two installments: 
     </p>
