--- a/event_info.html
+++ b/event_info.html
@@ -75,7 +75,7 @@
   <section id="location">
     <h2>Location</h2>
     <p>
-      IMBT 2026 takes place in <strong>Bovec, Slovenia</strong>, in the Julian Alps, famous for its emerald-green Soča River and Triglav National Park. This town in northwestern Sloveia's Julian Alps is famous as the "adventure capital" for activities like rafting, kayaking, and hiking.
+      IMBT 2026 takes place in <strong>Bovec, Slovenia</strong>, in the Julian Alps, famous for its emerald-green Soča River and Triglav National Park. This town in northwestern Slovenia's Julian Alps is famous as the "adventure capital" for activities like rafting, kayaking, and hiking.
     </p>
     <p>
       Participants will stay at the 4★ Hotel Mangart, offering full accommodation, meals, and breathtaking views. Hotel Mangart is located in the heart of Triglav national park.
