--- a/staff.html
+++ b/staff.html
@@ -154,8 +154,37 @@
       <p>IMC HON. mention</p>
       <p>EGMO HON. mention</p>
     </div>
+
+      
     </div>
   </section>
+  <section id="Administration committee">
+  <h2>Administration committee</h2>
+  <div class="staff-container">
+    <div class="staff-card">
+      <img src="images/мамыч.jpg" alt="Maria Chizhova" width="150">
+      <h3>Maria Chizhova</h3>
+      <p>Adiminstration lead</p>
+    </div>
+
+
+
+    <div class="staff-card">
+      <img src="images/папыч.jpg" alt="Mikhail Chizhov" width="150">
+      <h3>Mikhail Chizhov</h3>
+      <p>Master of ceremony </p>
+    </div>
+    </div>
+  </section>
+      
+  
+
+
+
+
+
+
+  
 
   <p class="centered">Our mission is to foster a <strong>global community of young thinkers</strong> who love solving problems and rising to a challenge.</p>
   </section>
@@ -192,4 +221,5 @@
 
 
 </html>
+
 
