--- a/staff.html
+++ b/staff.html
@@ -162,16 +162,17 @@
   <h2>Administration committee</h2>
   <div class="staff-container">
     <div class="staff-card">
-      <img src="images/мамыч.jpg" alt="Maria Chizhova" width="150">
+      <img src="images/мамыч.jpeg" alt="Maria Chizhova" width="150">
       <h3>Maria Chizhova</h3>
-      <p>Adiminstration lead</p>
+      <p>Administration lead</p>
     </div>
 
 
 
     <div class="staff-card">
-      <img src="images/папыч.jpg" alt="Mikhail Chizhov" width="150">
+      <img src="images/папыч.jpeg" alt="Mikhail Chizhov" width="150">
       <h3>Mikhail Chizhov</h3>
+      <p>Onsight administrator </p>
       <p>Master of ceremony </p>
     </div>
     </div>
@@ -221,5 +222,6 @@
 
 
 </html>
+
 
 
