--- a/staff.html
+++ b/staff.html
@@ -172,7 +172,7 @@
     <div class="staff-card">
       <img src="images/папыч.jpeg" alt="Mikhail Chizhov" width="150">
       <h3>Mikhail Chizhov</h3>
-      <p>Onsight administrator </p>
+      <p>On-site administrator </p>
       <p>Master of ceremony </p>
     </div>
     </div>
@@ -222,6 +222,7 @@
 
 
 </html>
+
 
 
 
